--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@ionic/vue": "^8.0.0",
     "@ionic/vue-router": "^8.0.0",
+    "dexie": "^4.0.4",
     "i18next": "^23.11.3",
     "i18next-vue": "^4.0.0",
     "vue": "^3.4.21",
