--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
   "dependencies": {
     "@ionic/vue": "^8.0.0",
     "@ionic/vue-router": "^8.0.0",
+    "@vueuse/rxjs": "^10.9.0",
     "dexie": "^4.0.4",
     "i18next": "^23.11.3",
     "i18next-vue": "^4.0.0",
+    "rxjs": "^7.8.1",
     "vue": "^3.4.21",
     "vue-router": "^4.3.2"
   },
