add import export capability

--- a/package.json
+++ b/package.json
@@ -13,11 +13,14 @@
     "@ionic/vue-router": "^8.1.0",
     "@material-design-icons/svg": "^0.14.13",
     "@material/material-color-utilities": "^0.2.7",
+    "@msgpack/msgpack": "^3.0.0-beta2",
     "@vueuse/rxjs": "^10.9.0",
     "dexie": "^4.0.4",
     "i18next": "^23.11.3",
     "i18next-vue": "^4.0.0",
     "rxjs": "^7.8.1",
+    "typeson": "^9.0.3",
+    "typeson-registry": "^9.2.1",
     "vue": "^3.4.26",
     "vue-router": "^4.3.2"
   },
