--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@material/material-color-utilities": "^0.2.7",
     "@msgpack/msgpack": "^3.0.0-beta2",
     "@vueuse/rxjs": "^10.9.0",
+    "dayjs": "^1.11.11",
     "dexie": "^4.0.4",
     "i18next": "^23.11.3",
     "i18next-vue": "^4.0.0",
