added capacitor, needed to deploy app on Android

--- a/package.json
+++ b/package.json
@@ -6,9 +6,12 @@
   "scripts": {
     "dev": "vite",
     "build": "vue-tsc && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "capacitor:sync:before": "IS_CAPACITOR=1 yarn run build"
   },
   "dependencies": {
+    "@capacitor/android": "^6.0.0",
+    "@capacitor/core": "^6.0.0",
     "@ionic/vue": "^8.1.0",
     "@ionic/vue-router": "^8.1.0",
     "@material-design-icons/svg": "^0.14.13",
@@ -30,6 +33,7 @@
     "vue-router": "^4.3.2"
   },
   "devDependencies": {
+    "@capacitor/cli": "^6.0.0",
     "@vitejs/plugin-vue": "^5.0.4",
     "typescript": "^5.2.2",
     "vite": "^5.2.0",
