--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev": "vite",
     "build": "vue-tsc && vite build",
     "preview": "vite preview",
-    "capacitor:sync:before": "IS_CAPACITOR=1 yarn run build"
+    "capacitor:sync:before": "yarn run build"
   },
   "dependencies": {
     "@capacitor/android": "^6.0.0",
