--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@capacitor/android": "^6.0.0",
+    "@capacitor/app": "^6.0.0",
     "@capacitor/core": "^6.0.0",
     "@ionic/vue": "^8.1.0",
     "@ionic/vue-router": "^8.1.0",
