--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@capacitor/android": "^6.1.1",
     "@capacitor/app": "^6.0.0",
+    "@capacitor/assets": "^3.0.5",
     "@capacitor/core": "^6.1.1",
     "@ionic/vue": "^8.2.6",
     "@ionic/vue-router": "^8.2.6",
