--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "license": "AGPL-3.0-only",
   "packageManager": "yarn@1.22.22",
   "scripts": {
-    "dev": "vite",
-    "build": "vue-tsc && vite build",
-    "preview": "vite preview"
+    "dev": "rsbuild dev",
+    "build": "vue-tsc && rsbuild build",
+    "preview": "rsbuild preview"
   },
   "dependencies": {
     "@ionic/vue": "^8.4.1",
@@ -30,12 +30,11 @@
     "vue-router": "^4.5.0"
   },
   "devDependencies": {
+    "@rsbuild/core": "^1.1.13",
+    "@rsbuild/plugin-vue": "^1.0.5",
     "@tauri-apps/cli": "^2.1.0",
-    "@types/node": "^22.10.2",
-    "@vitejs/plugin-vue": "^5.2.1",
+    "@types/node": "^22.10.3",
     "typescript": "^5.7.2",
-    "vite": "^6.0.6",
-    "vite-svg-loader": "^5.1.0",
     "vue-tsc": "^2.2.0"
   }
 }
