--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@material/material-color-utilities": "^0.3.0",
     "@msgpack/msgpack": "^3.0.0-beta2",
     "@tauri-apps/plugin-fs": "~2",
+    "@tauri-apps/plugin-os": "~2",
     "@tauri-apps/plugin-store": "~2",
     "dayjs": "^1.11.13",
     "dexie": "^4.0.10",
@@ -25,6 +26,7 @@
     "rehype-stringify": "^10.0.1",
     "remark-parse": "^11.0.0",
     "remark-rehype": "^11.1.1",
+    "tauri-plugin-m3": "^0.1.1",
     "typeson": "^9.0.3",
     "typeson-registry": "^11.1.1",
     "unified": "^11.0.5",
