--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -25,5 +25,5 @@ tauri = { version = "2.1.0", features = [] }
 tauri-plugin-log = "2.0.0-rc"
 tauri-plugin-store = "2"
 tauri-plugin-fs = "2"
-tauri-plugin-m3 = "0.1.1"
+tauri-plugin-m3 = { git = "https://github.com/0xk1f0/tauri-plugin-m3" }
 tauri-plugin-os = "2"
