--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@material-design-icons/svg": "^0.14.13",
     "@material/material-color-utilities": "^0.3.0",
     "@msgpack/msgpack": "^3.0.0-beta2",
+    "@tauri-apps/plugin-biometric": "~2",
+    "@tauri-apps/plugin-dialog": "~2",
     "@tauri-apps/plugin-fs": "~2",
     "@tauri-apps/plugin-os": "~2",
     "@tauri-apps/plugin-store": "~2",
