--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -27,3 +27,8 @@ tauri-plugin-store = "2"
 tauri-plugin-fs = "2"
 tauri-plugin-m3 = { git = "https://github.com/0xk1f0/tauri-plugin-m3" }
 tauri-plugin-os = "2"
+tauri-plugin-persisted-scope = "2"
+tauri-plugin-dialog = "2"
+
+[target.'cfg(any(target_os = "android", target_os = "ios"))'.dependencies]
+tauri-plugin-biometric = "2"
