--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -29,6 +29,7 @@ tauri-plugin-m3 = { git = "https://github.com/0xk1f0/tauri-plugin-m3" }
 tauri-plugin-os = "2"
 tauri-plugin-persisted-scope = "2"
 tauri-plugin-dialog = "2"
+tauri-plugin-opener = "2.2.2"
 
 [target.'cfg(any(target_os = "android", target_os = "ios"))'.dependencies]
 tauri-plugin-biometric = "2"
