--- a/.github/workflows/build-android.yml
+++ b/.github/workflows/build-android.yml
@@ -11,7 +11,7 @@ on:
 
 # Sets the GITHUB_TOKEN permissions to allow deployment to GitHub Pages
 permissions:
-  contents: read
+  contents: write
 
 # Allow one concurrent deployment
 concurrency:
@@ -40,7 +40,7 @@ jobs:
       - name: Set up Android SDK
         uses: android-actions/setup-android@v3
       - name: Set up Android NDK
-        run: sdkmanager "ndk;27.0.11902837"
+        run: sdkmanager "ndk-bundle"
       - name: Set up Rust toolchain
         uses: dtolnay/rust-toolchain@stable
         with:
@@ -58,13 +58,12 @@ jobs:
       - name: Build universal APK
         run: yarn tauri android build --apk
         env:
-          NDK_HOME: ${{ env.ANDROID_HOME }}/ndk/27.0.11902837
+          NDK_HOME: ${{ env.ANDROID_HOME }}/ndk-bundle/
       - name: Publish artifact
         uses: softprops/action-gh-release@v1
         with:
           draft: true
           name: Development build for Android
-          tag_name: dev
           generate_release_notes: true
           files: |
             ./src-tauri/gen/android/app/build/outputs/apk/universal/release/app-universal-release.apk
