--- a/.github/workflows/build-android.yml
+++ b/.github/workflows/build-android.yml
@@ -44,7 +44,7 @@ jobs:
       - name: Set up Rust toolchain
         uses: dtolnay/rust-toolchain@stable
         with:
-          targets: aarch64-linux-android,armv7-linux-androideabi,i686-linux-android,x86_64-linux-android
+          targets: aarch64-linux-android,armv7-linux-androideabi,x86_64-linux-android
       - name: Install frontend dependencies
         run: yarn install --frozen-lockfile
       - name: Set up Android signing
@@ -56,14 +56,15 @@ jobs:
           base64 -d <<< "${{ secrets.ANDROID_KEY_BASE64 }}" > $RUNNER_TEMP/keystore.jks
           echo "storeFile=$RUNNER_TEMP/keystore.jks" >> local.properties
       - name: Build universal APK
-        run: yarn tauri android build --apk
+        run: yarn tauri android build --apk --target aarch64 armv7 x86_64 --ci
         env:
           NDK_HOME: ${{ env.ANDROID_HOME }}/ndk/28.0.12674087/
       - name: Publish artifact
         uses: softprops/action-gh-release@v1
         with:
-          draft: true
           name: Development build for Android
+          prerelease: true
+          tag_name: dev
           generate_release_notes: true
           files: |
             ./src-tauri/gen/android/app/build/outputs/apk/universal/release/app-universal-release.apk
