--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "typeson-registry": "^11.1.1",
     "unified": "^11.0.5",
     "vue": "^3.5.13",
+    "vue-accessible-color-picker": "^5.1.1",
     "vue-router": "^4.5.0"
   },
   "devDependencies": {
