--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
   },
   "devDependencies": {
     "@rsbuild/core": "^1.2.3",
+    "@rsbuild/plugin-basic-ssl": "^1.1.1",
     "@rsbuild/plugin-vue": "^1.0.5",
     "@tauri-apps/cli": "^2.2.7",
     "@types/node": "^22.10.10",
