--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "scripts": {
     "dev": "rsbuild dev",
     "build": "vue-tsc && rsbuild build",
-    "preview": "rsbuild preview"
+    "preview": "rsbuild preview",
+    "upgrade-vcs": "node upgrade-vcs.js"
   },
   "dependencies": {
     "@ionic/vue": "^8.4.2",
@@ -39,6 +40,7 @@
     "@rsbuild/plugin-vue": "^1.0.5",
     "@tauri-apps/cli": "^2.2.7",
     "@types/node": "^22.10.10",
+    "smol-toml": "^1.3.1",
     "typescript": "^5.7.3",
     "vue-tsc": "^2.2.0"
   }
