--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -21,7 +21,7 @@ tauri-build = { version = "2.0.5", features = [] }
 serde_json = "1.0"
 serde = { version = "1.0", features = ["derive"] }
 log = "0.4"
-tauri = { version = "2.2.5", features = [""] }
+tauri = { version = "2.2.5", features = [] }
 tauri-plugin-log = "2.0.0-rc"
 tauri-plugin-store = "2"
 tauri-plugin-fs = "2"
