very minor changes, mostly tsc related

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,6 +11,7 @@
     "allowImportingTsExtensions": true,
     "resolveJsonModule": true,
     "isolatedModules": true,
+    "types": [],
     "noEmit": true,
     "jsx": "preserve",
     "removeComments": true,
