--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@tauri-apps/plugin-biometric": "~2",
     "@tauri-apps/plugin-dialog": "~2",
     "@tauri-apps/plugin-fs": "~2",
+    "@tauri-apps/plugin-http": "~2",
     "@tauri-apps/plugin-opener": "^2.2.5",
     "@tauri-apps/plugin-os": "~2",
     "@tauri-apps/plugin-store": "~2",
