--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -30,6 +30,7 @@ tauri-plugin-os = "2"
 tauri-plugin-persisted-scope = "2"
 tauri-plugin-dialog = "2"
 tauri-plugin-opener = "2.2.5"
+tauri-plugin-http = "2"
 
 [target.'cfg(any(target_os = "android", target_os = "ios"))'.dependencies]
 tauri-plugin-biometric = "2"
