--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -31,6 +31,7 @@ tauri-plugin-persisted-scope = "2"
 tauri-plugin-dialog = "2"
 tauri-plugin-opener = "2.2.5"
 tauri-plugin-http = "2"
+tauri-plugin-ampersand = { path = "./plugin" }
 
 [target.'cfg(any(target_os = "android", target_os = "ios"))'.dependencies]
 tauri-plugin-biometric = "2"
