--- a/package.json
+++ b/package.json
@@ -13,20 +13,20 @@
   "dependencies": {
     "@ionic/vue": "^8.4.3",
     "@ionic/vue-router": "^8.4.3",
-    "@material-symbols/svg-600": "^0.28.1",
+    "@material-symbols/svg-600": "^0.28.2",
     "@material/material-color-utilities": "^0.3.0",
-    "@msgpack/msgpack": "^3.0.0-beta3",
+    "@msgpack/msgpack": "^3.1.0",
     "@tauri-apps/plugin-biometric": "~2",
     "@tauri-apps/plugin-dialog": "~2",
     "@tauri-apps/plugin-fs": "~2",
     "@tauri-apps/plugin-http": "~2",
-    "@tauri-apps/plugin-opener": "^2.2.5",
+    "@tauri-apps/plugin-opener": "^2.2.6",
     "@tauri-apps/plugin-os": "~2",
     "@tauri-apps/plugin-store": "~2",
     "dayjs": "^1.11.13",
     "dexie": "^4.0.11",
     "i18next": "^24.2.2",
-    "i18next-vue": "^5.0.0",
+    "i18next-vue": "^5.2.0",
     "tauri-plugin-m3": "https://github.com/0xk1f0/tauri-plugin-m3",
     "typeson": "^9.0.3",
     "typeson-registry": "^11.1.1",
@@ -35,13 +35,13 @@
     "vue-router": "^4.5.0"
   },
   "devDependencies": {
-    "@rsbuild/core": "^1.2.3",
+    "@rsbuild/core": "^1.2.14",
     "@rsbuild/plugin-basic-ssl": "^1.1.1",
-    "@rsbuild/plugin-vue": "^1.0.5",
-    "@tauri-apps/cli": "^2.2.7",
-    "@types/node": "^22.12.0",
+    "@rsbuild/plugin-vue": "^1.0.6",
+    "@tauri-apps/cli": "^2.3.1",
+    "@types/node": "^22.13.9",
     "smol-toml": "^1.3.1",
-    "typescript": "^5.7.3",
-    "vue-tsc": "^2.2.0"
+    "typescript": "^5.8.2",
+    "vue-tsc": "^2.2.8"
   }
 }
