--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -15,23 +15,23 @@ name = "ampersand"
 crate-type = ["staticlib", "cdylib", "rlib"]
 
 [build-dependencies]
-tauri-build = { version = "2.0.5", features = [] }
+tauri-build = { version = "2.0.6", features = [] }
 
 [dependencies]
 serde_json = "1.0"
 serde = { version = "1.0", features = ["derive"] }
 log = "0.4"
-tauri = { version = "2.2.5", features = [] }
-tauri-plugin-log = "2.0.0-rc"
-tauri-plugin-store = "2"
-tauri-plugin-fs = "2"
+tauri = { version = "2.3.1", features = [] }
+tauri-plugin-log = "2.2.3"
+tauri-plugin-store = "2.2.0"
+tauri-plugin-fs = "2.2.0"
 tauri-plugin-m3 = { git = "https://github.com/0xk1f0/tauri-plugin-m3" }
-tauri-plugin-os = "2"
-tauri-plugin-persisted-scope = "2"
-tauri-plugin-dialog = "2"
-tauri-plugin-opener = "2.2.5"
-tauri-plugin-http = "2"
+tauri-plugin-os = "2.2.0"
+tauri-plugin-persisted-scope = "2.2.0"
+tauri-plugin-dialog = "2.2.0"
+tauri-plugin-opener = "2.2.6"
+tauri-plugin-http = "2.3.0"
 tauri-plugin-ampersand = { path = "./plugin" }
 
 [target.'cfg(any(target_os = "android", target_os = "ios"))'.dependencies]
-tauri-plugin-biometric = "2"
+tauri-plugin-biometric = "2.2.0"
