add debug feature to tauri toml

--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -14,6 +14,9 @@ rust-version = "1.77.2"
 name = "ampersand"
 crate-type = ["staticlib", "cdylib", "rlib"]
 
+[features]
+debug = ["tauri/devtools"]
+
 [build-dependencies]
 tauri-build = { version = "2.0.6", features = [] }
 
