remove some plugins we don't use

--- a/package.json
+++ b/package.json
@@ -16,13 +16,13 @@
     "@material-symbols/svg-600": "^0.28.2",
     "@material/material-color-utilities": "^0.3.0",
     "@msgpack/msgpack": "3.0.0-beta3",
-    "@tauri-apps/plugin-biometric": "~2",
-    "@tauri-apps/plugin-dialog": "~2",
-    "@tauri-apps/plugin-fs": "~2",
-    "@tauri-apps/plugin-http": "~2",
-    "@tauri-apps/plugin-opener": "^2.2.6",
-    "@tauri-apps/plugin-os": "~2",
-    "@tauri-apps/plugin-store": "~2",
+    "@tauri-apps/plugin-biometric": "2.2.0",
+    "@tauri-apps/plugin-dialog": "2.2.0",
+    "@tauri-apps/plugin-fs": "2.2.0",
+    "@tauri-apps/plugin-http": "2.3.0",
+    "@tauri-apps/plugin-opener": "2.2.6",
+    "@tauri-apps/plugin-os": "2.2.0",
+    "@tauri-apps/plugin-store": "2.2.0",
     "dayjs": "^1.11.13",
     "dexie": "^4.0.11",
     "i18next": "^24.2.2",
