update android github workflow

--- a/.github/workflows/build-android.yml
+++ b/.github/workflows/build-android.yml
@@ -63,13 +63,19 @@ jobs:
         run: yarn tauri android build --apk --target aarch64 armv7 --ci
         env:
           NDK_HOME: ${{ env.ANDROID_HOME }}/ndk/28.0.12674087/
-      - name: Update dev tag
+      - name: Update dev tag and remove old prerelease
         run: |
+          gh release delete dev -y || true
           git tag -d dev || true
           git push origin :refs/tags/dev || true
           git tag dev
           git push origin dev
       - name: Publish artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: Android APK
+          path: ./src-tauri/gen/android/app/build/outputs/apk/*/release/*.apk
+      - name: Publish to release
         uses: softprops/action-gh-release@v2.2.1
         with:
           name: Development build for Android (${{ env.AMPERSAND_VERSION }})
