--- a/package.json
+++ b/package.json
@@ -5,43 +5,42 @@
   "license": "AGPL-3.0-only",
   "packageManager": "yarn@1.22.22",
   "scripts": {
-    "dev": "rsbuild dev",
-    "build": "vue-tsc && rsbuild build",
-    "preview": "rsbuild preview",
+    "dev": "tauri dev",
+    "build": "vue-tsc && tauri build",
     "upgrade-vcs": "node upgrade-vcs.mjs"
   },
   "dependencies": {
-    "@ionic/vue": "^8.4.3",
-    "@ionic/vue-router": "^8.4.3",
-    "@material-symbols/svg-600": "^0.28.2",
+    "@ionic/vue": "^8.6.5",
+    "@ionic/vue-router": "^8.6.5",
+    "@material-symbols/svg-600": "^0.33.0",
     "@material/material-color-utilities": "^0.3.0",
-    "@msgpack/msgpack": "3.0.0-beta3",
-    "@tauri-apps/plugin-biometric": "2.2.0",
-    "@tauri-apps/plugin-dialog": "2.2.0",
-    "@tauri-apps/plugin-fs": "2.2.0",
-    "@tauri-apps/plugin-http": "2.3.0",
-    "@tauri-apps/plugin-opener": "2.2.6",
-    "@tauri-apps/plugin-os": "2.2.0",
-    "@tauri-apps/plugin-store": "2.2.0",
+    "@msgpack/msgpack": "3.1.2",
+    "@tauri-apps/plugin-biometric": "2.3.0",
+    "@tauri-apps/plugin-dialog": "2.3.1",
+    "@tauri-apps/plugin-fs": "2.4.1",
+    "@tauri-apps/plugin-http": "2.5.1",
+    "@tauri-apps/plugin-opener": "2.4.0",
+    "@tauri-apps/plugin-os": "2.3.0",
+    "@tauri-apps/plugin-store": "2.3.0",
     "dayjs": "^1.11.13",
     "dexie": "^4.0.11",
-    "i18next": "^24.2.2",
-    "i18next-vue": "^5.2.0",
+    "i18next": "^25.3.2",
+    "i18next-vue": "^5.3.0",
     "tauri-plugin-m3": "https://github.com/0xk1f0/tauri-plugin-m3",
-    "typeson": "^9.0.3",
+    "typeson": "^9.0.4",
     "typeson-registry": "^11.1.1",
-    "vue": "^3.5.13",
-    "vue-accessible-color-picker": "^5.2.0",
-    "vue-router": "^4.5.0"
+    "vue": "^3.5.18",
+    "vue-accessible-color-picker": "^5.3.0",
+    "vue-router": "^4.5.1"
   },
   "devDependencies": {
-    "@rsbuild/core": "^1.2.14",
+    "@rsbuild/core": "^1.4.10",
     "@rsbuild/plugin-basic-ssl": "^1.1.1",
-    "@rsbuild/plugin-vue": "^1.0.6",
-    "@tauri-apps/cli": "^2.3.1",
-    "@types/node": "^22.13.9",
-    "smol-toml": "^1.3.1",
-    "typescript": "^5.8.2",
-    "vue-tsc": "^2.2.8"
+    "@rsbuild/plugin-vue": "^1.1.0",
+    "@tauri-apps/cli": "^2.7.1",
+    "@types/node": "^24.1.0",
+    "smol-toml": "^1.4.1",
+    "typescript": "^5.8.3",
+    "vue-tsc": "^3.0.4"
   }
 }
