try to build ci for pc

--- a/.github/workflows/build-android.yml
+++ b/.github/workflows/build-android.yml
@@ -9,7 +9,7 @@ on:
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
-# Sets the GITHUB_TOKEN permissions to allow deployment to GitHub Pages
+# Sets the GITHUB_TOKEN permissions to allow deployment
 permissions:
   contents: write
 
@@ -78,7 +78,7 @@ jobs:
           name: Android APK
           path: ./src-tauri/gen/android/app/build/outputs/apk/universal/release/ampersand-ci-universal-release.apk
       - name: Publish to release
-        uses: softprops/action-gh-release@v2.2.1
+        uses: softprops/action-gh-release@v2.3.2
         with:
           name: Development build for Android (${{ env.AMPERSAND_VERSION }})
           prerelease: true
