--- a/.github/workflows/build-android.yml
+++ b/.github/workflows/build-android.yml
@@ -81,7 +81,9 @@ jobs:
         uses: softprops/action-gh-release@v2.3.2
         with:
           name: Development build for Android (${{ env.AMPERSAND_VERSION }})
-          prerelease: true
+          prerelease: false
+          draft: false
+          make_latest: 'true'
           tag_name: dev
           generate_release_notes: true
           files: |
