--- a/.github/workflows/build-pc.yml
+++ b/.github/workflows/build-pc.yml
@@ -24,6 +24,10 @@ jobs:
       name: build-pc
     runs-on: ubuntu-latest
     steps:
+    - name: Checkout
+      uses: actions/checkout@v4
+      with:
+        fetch-depth: 0
     - name: Update dev tag and remove old prerelease
       run: |
         gh release delete dev-pc -y || true
