[skip ci] mark pc builds as prerelease

--- a/.github/workflows/build-pc.yml
+++ b/.github/workflows/build-pc.yml
@@ -88,7 +88,7 @@ jobs:
         uses: softprops/action-gh-release@v2.3.2
         with:
           name: Development build for PC (${{ env.AMPERSAND_VERSION }})
-          prerelease: false
+          prerelease: true
           draft: false
           tag_name: dev-pc
           generate_release_notes: true
