--- a/.github/workflows/build-android.yml
+++ b/.github/workflows/build-android.yml
@@ -82,6 +82,8 @@ jobs:
         with:
           name: Development build for Android (${{ env.AMPERSAND_VERSION }})
           tag_name: dev
+          prerelease: false
+          draft: false
           generate_release_notes: true
           files: |
             ./src-tauri/gen/android/app/build/outputs/apk/universal/release/ampersand-ci-universal-release.apk
