--- a/.github/workflows/build-pc.yml
+++ b/.github/workflows/build-pc.yml
@@ -89,6 +89,7 @@ jobs:
         with:
           name: Development build for PC (${{ env.AMPERSAND_VERSION }})
           prerelease: true
+          draft: false
           tag_name: dev-pc
           generate_release_notes: true
           files: |
