--- a/src-tauri/plugin/Cargo.toml
+++ b/src-tauri/plugin/Cargo.toml
@@ -9,6 +9,7 @@ links = "tauri-plugin-ampersand"
 
 [dependencies]
 tauri = { version = "2.2.5" }
+wry = "0.53.3"
 serde = "1.0"
 thiserror = "2"
 tauri-plugin-opener = "2.2.5"
