--- a/src-tauri/plugin/permissions/default.toml
+++ b/src-tauri/plugin/permissions/default.toml
@@ -1,3 +1,4 @@
 [default]
 description = "Default permissions for the Ampersand plugin"
-permissions = ["allow-exit-app", "allow-open-file", "allow-set-can-go-back", "allow-registerListener"]
+permissions = ["allow-exit-app", "allow-open-file", "allow-set-can-go-back", "allow-get-webkit-version", "allow-registerListener"]
+
