--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "scripts": {
     "dev": "tauri dev",
     "build": "vue-tsc && tauri build",
-    "upgrade-vcs": "node upgrade-vcs.mjs"
+    "upgrade-vcs": "node upgrade-vcs.mjs",
+    "eslint": "eslint src/"
   },
   "dependencies": {
     "@ionic/vue": "8.7.0",
@@ -33,13 +34,16 @@
     "vue-router": "^4.5.1"
   },
   "devDependencies": {
+    "@eslint/js": "^9.35.0",
     "@rsbuild/core": "^1.4.15",
     "@rsbuild/plugin-basic-ssl": "^1.2.1",
     "@rsbuild/plugin-vue": "^1.1.1",
     "@tauri-apps/cli": "^2.7.1",
     "@types/node": "^24.2.1",
+    "eslint": "^9.35.0",
     "smol-toml": "^1.4.2",
     "typescript": "^5.9.2",
+    "typescript-eslint": "^8.43.0",
     "vue-tsc": "^3.0.5"
   }
 }
