some more linting

--- a/package.json
+++ b/package.json
@@ -38,12 +38,16 @@
     "@rsbuild/core": "^1.4.15",
     "@rsbuild/plugin-basic-ssl": "^1.2.1",
     "@rsbuild/plugin-vue": "^1.1.1",
+    "@stylistic/eslint-plugin": "^5.3.1",
     "@tauri-apps/cli": "^2.7.1",
     "@types/node": "^24.2.1",
     "eslint": "^9.35.0",
+    "eslint-plugin-vue": "^10.4.0",
+    "globals": "^16.4.0",
     "smol-toml": "^1.4.2",
     "typescript": "^5.9.2",
     "typescript-eslint": "^8.43.0",
+    "vue-eslint-parser": "^10.2.0",
     "vue-tsc": "^3.0.5"
   }
 }
