Add Android IPC via binder
For fronting events rn, could expand later

--- a/src-tauri/plugin/permissions/default.toml
+++ b/src-tauri/plugin/permissions/default.toml
@@ -1,4 +1,10 @@
 [default]
 description = "Default permissions for the Ampersand plugin"
-permissions = ["allow-exit-app", "allow-open-file", "allow-set-can-go-back", "allow-get-webkit-version", "allow-registerListener"]
-
+permissions = [
+	"allow-exit-app",
+	"allow-open-file",
+	"allow-set-can-go-back",
+	"allow-get-webkit-version",
+	"allow-broadcast-event",
+	"allow-registerListener"
+]
