--- a/package.json
+++ b/package.json
@@ -13,41 +13,41 @@
   "dependencies": {
     "@ionic/vue": "8.7.0",
     "@ionic/vue-router": "^8.7.2",
-    "@material-symbols/svg-600": "^0.34.1",
+    "@material-symbols/svg-600": "^0.36.2",
     "@material/material-color-utilities": "^0.3.0",
     "@msgpack/msgpack": "3.1.2",
     "@tauri-apps/plugin-biometric": "2.3.0",
-    "@tauri-apps/plugin-dialog": "2.3.2",
-    "@tauri-apps/plugin-fs": "2.4.1",
-    "@tauri-apps/plugin-http": "2.5.1",
-    "@tauri-apps/plugin-opener": "2.4.0",
-    "@tauri-apps/plugin-os": "2.3.0",
-    "@tauri-apps/plugin-store": "2.3.0",
-    "dayjs": "^1.11.13",
-    "i18next": "^25.3.4",
+    "@tauri-apps/plugin-dialog": "2.4.0",
+    "@tauri-apps/plugin-fs": "2.4.2",
+    "@tauri-apps/plugin-http": "2.5.2",
+    "@tauri-apps/plugin-opener": "2.5.0",
+    "@tauri-apps/plugin-os": "2.3.1",
+    "@tauri-apps/plugin-store": "2.4.0",
+    "dayjs": "^1.11.18",
+    "i18next": "^25.5.3",
     "i18next-vue": "^5.3.0",
-    "tauri-plugin-m3": "https://github.com/0xk1f0/tauri-plugin-m3",
+    "tauri-plugin-m3": "0.2.2",
     "typeson": "^9.0.4",
-    "typeson-registry": "^11.1.1",
-    "vue": "^3.5.18",
+    "typeson-registry": "^12.0.0",
+    "vue": "^3.5.22",
     "vue-accessible-color-picker": "^5.3.1",
     "vue-router": "^4.5.1"
   },
   "devDependencies": {
-    "@eslint/js": "^9.35.0",
-    "@rsbuild/core": "^1.4.15",
+    "@eslint/js": "^9.37.0",
+    "@rsbuild/core": "^1.5.13",
     "@rsbuild/plugin-basic-ssl": "^1.2.1",
-    "@rsbuild/plugin-vue": "^1.1.1",
-    "@stylistic/eslint-plugin": "^5.3.1",
-    "@tauri-apps/cli": "^2.7.1",
-    "@types/node": "^24.2.1",
-    "eslint": "^9.35.0",
-    "eslint-plugin-vue": "^10.4.0",
+    "@rsbuild/plugin-vue": "^1.1.2",
+    "@stylistic/eslint-plugin": "^5.4.0",
+    "@tauri-apps/cli": "^2.8.4",
+    "@types/node": "^24.6.2",
+    "eslint": "^9.37.0",
+    "eslint-plugin-vue": "^10.5.0",
     "globals": "^16.4.0",
     "smol-toml": "^1.4.2",
-    "typescript": "^5.9.2",
-    "typescript-eslint": "^8.43.0",
+    "typescript": "^5.9.3",
+    "typescript-eslint": "^8.45.0",
     "vue-eslint-parser": "^10.2.0",
-    "vue-tsc": "^3.0.5"
+    "vue-tsc": "^3.1.0"
   }
 }
