--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -24,13 +24,13 @@ tauri-build = { version = "2.3.1", features = [] }
 serde_json = "1.0"
 serde = { version = "1.0", features = ["derive"] }
 log = "0.4"
-tauri = { version = "2.7.0", features = [] }
-tauri-plugin-store = "2.3.0"
+tauri = { version = "2.8.0", features = [] }
+tauri-plugin-store = "2.4.0"
 tauri-plugin-fs = "2.4.1"
-tauri-plugin-m3 = { git = "https://github.com/0xk1f0/tauri-plugin-m3" }
+tauri-plugin-m3 = "0.2.2"
 tauri-plugin-os = "2.3.0"
-tauri-plugin-dialog = "2.3.2"
-tauri-plugin-opener = "2.4.0"
+tauri-plugin-dialog = "2.4.0"
+tauri-plugin-opener = "2.5.0"
 tauri-plugin-http = "2.5.1"
 tauri-plugin-ampersand = { path = "./plugin" }
 
