--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -47,6 +47,7 @@ jobs:
     permissions:
       contents: write
   release:
+    needs: [prepare-build, build-android, build-pc]
     environment:
       name: build
     runs-on: ubuntu-latest
