add list assets as utility command, we never know

--- a/src-tauri/plugin/permissions/default.toml
+++ b/src-tauri/plugin/permissions/default.toml
@@ -6,5 +6,6 @@ permissions = [
 	"allow-set-can-go-back",
 	"allow-get-webkit-version",
 	"allow-broadcast-event",
+	"allow-list-assets",
 	"allow-registerListener"
 ]
