--- a/src-tauri/plugin/Cargo.toml
+++ b/src-tauri/plugin/Cargo.toml
@@ -11,7 +11,11 @@ links = "tauri-plugin-ampersand"
 tauri = "2.10.2"
 serde = "1"
 thiserror = "2"
+tauri-plugin-fs = "2.4.5"
 tauri-plugin-opener = "2.5.3"
+rusqlite = { version = "0.37.0", features = ["bundled"] }
+msgpack-time = "1.0.0"
+rmpv = "1.3.0"
 
 [build-dependencies]
 tauri-plugin = { version = "2.5.3", features = ["build"] }
