--- a/.github/workflows/build-android.yml
+++ b/.github/workflows/build-android.yml
@@ -59,19 +59,31 @@ jobs:
           echo "keyPassword=${{ secrets.ANDROID_KEY_PASSWORD }}" >> local.properties
           base64 -d <<< "${{ secrets.ANDROID_KEY_BASE64 }}" > $RUNNER_TEMP/keystore.jks
           echo "storeFile=$RUNNER_TEMP/keystore.jks" >> local.properties
-      - name: Build universal APK
-        run: yarn tauri android build --apk --target aarch64 armv7 --ci
+      - name: Build app
+        run: yarn tauri android build --aab --apk --target aarch64 armv7 --ci
         env:
           NDK_HOME: ${{ env.ANDROID_HOME }}/ndk/28.0.12674087/
-      - name: Publish artifact
+      - name: Publish artifact (APK)
         uses: actions/upload-artifact@v4
         with:
-          name: Android APK
-          path: ./src-tauri/gen/android/app/build/outputs/apk/universal/release/ampersand-ci-universal-release.apk
+          name: Android App (APK)
+          path: |
+            ./src-tauri/gen/android/app/build/outputs/apk/universal/release/ampersand-ci-universal-release.apk
+            ./src-tauri/gen/android/app/build/outputs/apk/universal/release/ampersand-universal-release.apk
+      - name: Publish artifact (AAB)
+        uses: actions/upload-artifact@v4
+        with:
+          name: Android Application Bundle (AAB)
+          path: |
+            ./src-tauri/gen/android/app/build/outputs/bundle/universalRelease/ampersand-ci-universal-release.aab
+            ./src-tauri/gen/android/app/build/outputs/bundle/universalRelease/ampersand-universal-release.aab
       - name: Publish to release
         uses: softprops/action-gh-release@v2.4.1
         with:
-          tag_name: dev
+          tag_name: ${{ github.ref_name != 'main' && github.ref_name || 'dev' }}
           draft: true
           files: |
             ./src-tauri/gen/android/app/build/outputs/apk/universal/release/ampersand-ci-universal-release.apk
+            ./src-tauri/gen/android/app/build/outputs/apk/universal/release/ampersand-universal-release.apk
+            ./src-tauri/gen/android/app/build/outputs/bundle/universalRelease/ampersand-ci-universal-release.aab
+            ./src-tauri/gen/android/app/build/outputs/bundle/universalRelease/ampersand-universal-release.aab
