--- a/src-tauri/gen/android/app/.gitignore
+++ b/src-tauri/gen/android/app/.gitignore
@@ -1,6 +1,6 @@
 /src/main/java/moe/ampersand/app/generated
 /src/main/jniLibs/**/*.so
-/src/main/assets/tauri.conf.json
+/src/main/assets/
 /tauri.build.gradle.kts
 /proguard-tauri.pro
 /tauri.properties
