--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -28,13 +28,11 @@ jobs:
       uses: actions/checkout@v4
       with:
         fetch-depth: 0
-    - name: Update dev tag and remove old prerelease
+    - name: Remove old prerelease draft and create new dev tag
       run: |
-        gh release delete dev -y || true
-        git tag -d dev || true
-        git push origin :refs/tags/dev || true
         git tag dev
         git push origin dev
+        gh release delete dev -y || true
       env:
         GH_TOKEN: ${{ github.token }}
   build-android:
