allow concurrent GH actions builds for tags and dev

--- a/.github/workflows/build-android.yml
+++ b/.github/workflows/build-android.yml
@@ -18,7 +18,8 @@ permissions:
   contents: write
 
 concurrency:
-  group: 'build-android'
+  group: ${{ github.ref_name == 'main' && 'build-android-dev' || 'build-android-release' }}
+  cancel-in-progress: true
 
 jobs:
   # Single deploy job since we're just deploying
