--- a/src-tauri/plugin/Cargo.toml
+++ b/src-tauri/plugin/Cargo.toml
@@ -13,10 +13,17 @@ wry = "0.53.3"
 serde = "1.0"
 thiserror = "2"
 tauri-plugin-opener = "2.2.5"
-rusqlite = { version = "0.37.0", features = ["bundled"] }
+rusqlite = { version = "0.37.0", features = ["bundled-full"] }
 msgpack-time = "1.0.0"
 rmpv = "1.3.0"
 tauri-plugin-fs = "2.4.2"
+uuid = { version = "1.18.1", features = ["fast-rng", "v4"] }
+time = { version = "0.3.41", features = ["serde"] }
+serde-transcode = "1.1.1"
+rmp-serde = "1.3.0"
+serde_json = "1.0.145"
+serde_with = "3.15.1"
+strum_macros = "0.27.2"
 
 
 [build-dependencies]
