--- a/src-tauri/plugin/Cargo.toml
+++ b/src-tauri/plugin/Cargo.toml
@@ -16,14 +16,11 @@ tauri-plugin-fs = "2.4.5"
 tauri-plugin-opener = "2.5.3"
 
 rusqlite = { version = "0.37.0", features = ["bundled-full"] }
-rmpv = "1.3.0"
 uuid = { version = "1.18.1", features = ["fast-rng", "v4"] }
 time = { version = "0.3.41", features = ["serde"] }
-serde-transcode = "1.1.1"
 rmp-serde = "1.3.0"
-serde_json = "1.0.145"
-serde_with = "3.15.1"
 strum_macros = "0.27.2"
+serde_bytes = "0.11.19"
 
 [build-dependencies]
 tauri-plugin = { version = "2.5.3", features = ["build"] }
