--- a/src-tauri/plugin/permissions/default.toml
+++ b/src-tauri/plugin/permissions/default.toml
@@ -7,5 +7,8 @@ permissions = [
 	"allow-get-webkit-version",
 	"allow-broadcast-event",
 	"allow-list-assets",
-	"allow-registerListener"
+	"allow-registerListener",
+	"allow-db-test",
+	"allow-db-migrate-old",
+	"allow-db-run-migrations"
 ]
