rust: plugin: remove db_test, db_run_migrations and db_migrate_old

--- a/src-tauri/plugin/permissions/default.toml
+++ b/src-tauri/plugin/permissions/default.toml
@@ -6,8 +6,5 @@ permissions = [
 	"allow-broadcast-event",
 	"allow-list-assets",
 	"allow-dismiss-splash",
-	"allow-register-listener",
-	"allow-db-test",
-	"allow-db-run-migrations",
-	"allow-db-migrate-old"
+	"allow-register-listener"
 ]
