implement splash keeper

--- a/src-tauri/plugin/permissions/default.toml
+++ b/src-tauri/plugin/permissions/default.toml
@@ -7,5 +7,6 @@ permissions = [
 	"allow-get-webkit-version",
 	"allow-broadcast-event",
 	"allow-list-assets",
+	"allow-dismiss-splash",
 	"allow-registerListener"
 ]
