update dependencies, sort out issues

--- a/src-tauri/plugin/permissions/default.toml
+++ b/src-tauri/plugin/permissions/default.toml
@@ -3,10 +3,9 @@ description = "Default permissions for the Ampersand plugin"
 permissions = [
 	"allow-exit-app",
 	"allow-open-file",
-	"allow-set-can-go-back",
 	"allow-get-webkit-version",
 	"allow-broadcast-event",
 	"allow-list-assets",
 	"allow-dismiss-splash",
-	"allow-registerListener"
+	"allow-register-listener"
 ]
