--- a/package.json
+++ b/package.json
@@ -12,46 +12,47 @@
     "eslint": "eslint src/"
   },
   "dependencies": {
-    "@ionic/core": "8.7.0",
-    "@ionic/vue": "8.7.0",
-    "@ionic/vue-router": "^8.7.2",
-    "@material-symbols/svg-600": "^0.36.2",
+    "@ionic/core": "8.7.15",
+    "@ionic/vue": "8.7.15",
+    "@ionic/vue-router": "^8.7.15",
+    "@material-symbols/svg-600": "^0.40.2",
     "@material/material-color-utilities": "^0.3.0",
-    "@msgpack/msgpack": "3.1.2",
-    "@tauri-apps/api": "2.8.0",
-    "@tauri-apps/plugin-biometric": "2.3.0",
-    "@tauri-apps/plugin-dialog": "2.4.0",
-    "@tauri-apps/plugin-fs": "2.4.2",
-    "@tauri-apps/plugin-http": "2.5.2",
-    "@tauri-apps/plugin-opener": "2.5.0",
-    "@tauri-apps/plugin-os": "2.3.1",
-    "@tauri-apps/plugin-store": "2.4.0",
-    "dayjs": "^1.11.18",
-    "i18next": "^25.5.3",
-    "i18next-vue": "^5.3.0",
-    "marked": "^16.4.0",
+    "@msgpack/msgpack": "3.1.3",
+    "@tauri-apps/api": "2.9.1",
+    "@tauri-apps/plugin-biometric": "2.3.2",
+    "@tauri-apps/plugin-dialog": "2.4.2",
+    "@tauri-apps/plugin-fs": "2.4.4",
+    "@tauri-apps/plugin-http": "2.5.4",
+    "@tauri-apps/plugin-opener": "2.5.2",
+    "@tauri-apps/plugin-os": "2.3.2",
+    "@tauri-apps/plugin-store": "2.4.1",
+    "colorjs.io": "^0.6.0",
+    "dayjs": "^1.11.19",
+    "i18next": "^25.7.3",
+    "i18next-vue": "^5.4.0",
+    "marked": "^17.0.1",
     "tauri-plugin-m3": "0.2.2",
     "typeson": "^9.0.4",
     "typeson-registry": "^12.0.0",
-    "vue": "^3.5.22",
-    "vue-accessible-color-picker": "^5.3.1",
-    "vue-router": "^4.5.1"
+    "vue": "^3.5.26",
+    "vue-accessible-color-picker": "^6.0.0",
+    "vue-router": "^4.6.4"
   },
   "devDependencies": {
-    "@eslint/js": "^9.37.0",
-    "@rsbuild/core": "^1.5.13",
+    "@eslint/js": "^9.39.2",
+    "@rsbuild/core": "^1.6.15",
     "@rsbuild/plugin-basic-ssl": "^1.2.1",
-    "@rsbuild/plugin-vue": "^1.1.2",
-    "@stylistic/eslint-plugin": "^5.4.0",
-    "@tauri-apps/cli": "^2.8.4",
-    "@types/node": "^24.6.2",
-    "eslint": "^9.37.0",
-    "eslint-plugin-vue": "^10.5.0",
-    "globals": "^16.4.0",
-    "smol-toml": "^1.4.2",
+    "@rsbuild/plugin-vue": "^1.2.2",
+    "@stylistic/eslint-plugin": "^5.6.1",
+    "@tauri-apps/cli": "^2.9.6",
+    "@types/node": "^25.0.3",
+    "eslint": "^9.39.2",
+    "eslint-plugin-vue": "^10.6.2",
+    "globals": "^16.5.0",
+    "smol-toml": "^1.6.0",
     "typescript": "^5.9.3",
-    "typescript-eslint": "^8.45.0",
+    "typescript-eslint": "^8.50.1",
     "vue-eslint-parser": "^10.2.0",
-    "vue-tsc": "^3.1.0"
+    "vue-tsc": "^3.2.1"
   }
 }
