--- a/.github/workflows/build-android.yml
+++ b/.github/workflows/build-android.yml
@@ -60,7 +60,7 @@ jobs:
           base64 -d <<< "${{ secrets.ANDROID_KEY_BASE64 }}" > $RUNNER_TEMP/keystore.jks
           echo "storeFile=$RUNNER_TEMP/keystore.jks" >> local.properties
       - name: Build app
-        run: yarn tauri android build --aab --apk --target aarch64 armv7 --ci
+        run: yarn tauri android build --aab true --apk true --target aarch64 armv7 --ci
         env:
           NDK_HOME: ${{ env.ANDROID_HOME }}/ndk/28.0.12674087/
       - name: Publish artifact (APK)
