--- a/.github/workflows/build-android.yml
+++ b/.github/workflows/build-android.yml
@@ -60,13 +60,29 @@ jobs:
           base64 -d <<< "${{ secrets.ANDROID_KEY_BASE64 }}" > $RUNNER_TEMP/keystore.jks
           echo "storeFile=$RUNNER_TEMP/keystore.jks" >> local.properties
       - name: Build app
-        run: yarn tauri android build --aab true --apk true --target aarch64 armv7 --ci
+        run: |
+          yarn tauri android build --apk true --target aarch64 armv7 --split-per-abi --ci
+          yarn tauri android build --aab true --apk true --target aarch64 armv7 --ci
         env:
           NDK_HOME: ${{ env.ANDROID_HOME }}/ndk/28.0.12674087/
-      - name: Publish artifact (APK)
+      - name: Publish artifact (APK - ARMv7)
         uses: actions/upload-artifact@v4
         with:
-          name: Android App (APK)
+          name: Android App (APK - ARMv7)
+          path: |
+            ./src-tauri/gen/android/app/build/outputs/apk/arm/release/ampersand-ci-arm-release.apk
+            ./src-tauri/gen/android/app/build/outputs/apk/arm/release/ampersand-arm-release.apk
+      - name: Publish artifact (APK - ARM64)
+        uses: actions/upload-artifact@v4
+        with:
+          name: Android App (APK - ARM64)
+          path: |
+            ./src-tauri/gen/android/app/build/outputs/apk/arm64/release/ampersand-ci-arm64-release.apk
+            ./src-tauri/gen/android/app/build/outputs/apk/arm64/release/ampersand-arm64-release.apk
+      - name: Publish artifact (APK - Universal)
+        uses: actions/upload-artifact@v4
+        with:
+          name: Android App (APK - Universal)
           path: |
             ./src-tauri/gen/android/app/build/outputs/apk/universal/release/ampersand-ci-universal-release.apk
             ./src-tauri/gen/android/app/build/outputs/apk/universal/release/ampersand-universal-release.apk
@@ -85,5 +101,9 @@ jobs:
           files: |
             ./src-tauri/gen/android/app/build/outputs/apk/universal/release/ampersand-ci-universal-release.apk
             ./src-tauri/gen/android/app/build/outputs/apk/universal/release/ampersand-universal-release.apk
+            ./src-tauri/gen/android/app/build/outputs/apk/arm/release/ampersand-ci-universal-release.apk
+            ./src-tauri/gen/android/app/build/outputs/apk/arm/release/ampersand-universal-release.apk
+            ./src-tauri/gen/android/app/build/outputs/apk/arm64/release/ampersand-ci-universal-release.apk
+            ./src-tauri/gen/android/app/build/outputs/apk/arm64/release/ampersand-universal-release.apk
             ./src-tauri/gen/android/app/build/outputs/bundle/universalRelease/ampersand-ci-universal-release.aab
             ./src-tauri/gen/android/app/build/outputs/bundle/universalRelease/ampersand-universal-release.aab
